feat : enable to return user chats
This enables to return user chats using Paging library

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,9 @@
 
     <string name="acc_exist_message">Account with this email already exists</string>
 
+
+    //Home Screen
+    <string name="chats">Chats</string>
+    <string name="empty_chat_list_message">Looks like you don\'t have any chats</string>
+
 </resources>
