--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,12 +30,17 @@
 
     <string name="acc_exist_message">Account with this email already exists</string>
 
+    // UserSetData Screen
+    <string name="user_image">User Image</string>
 
     //Home Screen
     <string name="chats">Chats</string>
     <string name="empty_chat_list_message">Looks like you don\'t have any chats</string>
+    <string name="start_chat">Look for user to chat with</string>
 
     //Find Screen
     <string name="find_user">Find User</string>
+    <string name="username">Username</string>
+
 
 </resources>
